2006-09-21  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreeview.c (gtk_tree_view_class_init): enable original
	keybindings for Enter,
	(gtk_tree_view_key_press): for Enter, only handle the special
	cases, for the other cases we chain up to the parent class which
	will activate the original keybindings.
	NB#36935
	
2006-09-21  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkwidget.c: Restructure tap'n'hold (animation) code so that the
	animation is loaded only for the duration of tapping and holding.
	NB#22403

2006-09-21  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Taken from GNOME CVS. NB#31766

    2005-08-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkrange.c (gtk_range_adjustment_changed)
	(gtk_range_adjustment_value_changed):  Don't queue a draw
	if the layout has not changed.  (#313991, Benjamin Berg)

2006-09-20  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Taken from GNOME CVS. NB#18559

    Wed Sep 20 16:59:38 2006  Tim Janik  <timj@imendio.com>

	* gtk/gtkviewport.c: always update the bin_window position and size
	in size_allocate, even if we don't have a visible child. this fixes
	expose artefacts as described in #313508.

	* gtk/gtkscrolledwindow.c: make hiding of automatic scrollbars when we
	have no visible child explicit.

2006-09-20  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeprivate.h (TREE_VIEW_DRAG_WIDTH): Increase the drag area
	width for column header resizing from 6px to 28px
	(6 * (dpi/96) * (stylus ? 2 : 1))

2006-09-20  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeviewcolumn.c (_gtk_tree_view_column_realize_button):
	Replace magical '3' with properly calculated value when positioning
	the drag window, similar to gtk_tree_view_size_allocate_columns.

2006-09-19  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gdk/x11/gdkdisplay-x11.c (gdk_display_open): Allow disabling XSHM
	by setting GDK_DISABLE_XSHM environment variable. Partial hack for
	NB#22173/sapwood
